--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "game-phase3",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "^4.5.4",
-    "vite": "^2.9.0"
+    "typescript": "^4.5.4"
   },
   "dependencies": {
-    "phaser": "3.55.2",
-    "phaser3-rex-plugins": "^1.60.4"
+    "phaser": "3.60.0",
+    "phaser3-rex-plugins": "^1.60.4",
+    "vite": "^3.1.0"
   }
 }
